--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -69,7 +69,7 @@ ___  ___        _      _  _
       [finalDiagnosis1]="finalDiagnosis1"
       [finalDiagnosis2]="finalDiagnosis2"
     ></app-chh-app-final-diagnosis>
-  <!-- <ion-card mode="ios"  *ngIf="!isDesktop" >
+  <ion-card mode="ios"  *ngIf="!isDesktop" >
     <ion-list>
       <ion-item style="padding-top: 10px;">
         <div class="ion-text-wrap"><b>Lab Tests</b><br /></div>
@@ -114,7 +114,7 @@ ___  ___        _      _  _
               </ion-item>
               <div *ngIf="!isDesktop" class="overflow-scroll max-height-300">
                 <div  *ngFor="let x of currentExamList_filtered; let i = index">
-                  <ion-item lines="" (click)="examDetails(x,data.site,i)">
+                  <ion-item lines="" (click)="examDetails(x,data[0].site,i)">
                     <div class="ion-text-wrap"  >
                       <ion-text >
                         {{x.Test_Name}}
@@ -131,13 +131,39 @@ ___  ___        _      _  _
               </div>
           </div>
     </ion-list>
-  </ion-card> -->
+  </ion-card>
     <app-chh-app-list-of-doctors  
       [coDoctors]="coDoctors"
       [objecthandler]="objecthandler"
       [isFetchDone]="isFetchDone">
     </app-chh-app-list-of-doctors>
   </ion-content>
+  <ion-footer  >
+    <ion-toolbar *ngIf="!isDesktop">
+      <ion-item lines="none">
+      <ion-grid class="ion-no-padding">
+        <ion-row >
+          <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+          <ion-col size-xs="12" size-md="4" size-lg="4">
+            <ion-button
+              color="mango"
+              size="default"
+              expand="block"
+              shape="round"
+              (click)="redirecttoPF()"
+              *ngIf="data.is_posted == 0 || data.is_posted == null"
+              ><ion-icon name="checkmark-done-outline" *ngIf="checkmark"></ion-icon>Professional Fee</ion-button
+            >
+          </ion-col>
+          <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+        </ion-row>
+      </ion-grid>
+      </ion-item>
+    </ion-toolbar>
+    <div class="footer tab-font-family"  *ngIf="isDesktop">
+      <span>{{this.constants.CHH_NAME__VALUE__CEBU}}</span>
+    </div>
+  </ion-footer>
 <!--
 ______          _    _              
 |  _  \        | |  | |             
@@ -286,32 +312,7 @@ ______          _    _
     </ion-row>
   </ion-grid> -->
 </ion-content>
-<ion-footer  >
-  <ion-toolbar *ngIf="!isDesktop">
-    <ion-item lines="none">
-    <ion-grid class="ion-no-padding">
-      <ion-row >
-        <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
-        <ion-col size-xs="12" size-md="4" size-lg="4">
-          <ion-button
-            color="mango"
-            size="default"
-            expand="block"
-            shape="round"
-            (click)="redirecttoPF()"
-            *ngIf="data.is_posted == 0 || data.is_posted == null"
-            ><ion-icon name="checkmark-done-outline" *ngIf="checkmark"></ion-icon>Professional Fee</ion-button
-          >
-        </ion-col>
-        <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
-      </ion-row>
-    </ion-grid>
-    </ion-item>
-  </ion-toolbar>
-  <div class="footer tab-font-family"  *ngIf="isDesktop">
-    <span>{{this.constants.CHH_NAME__VALUE__CEBU}}</span>
-  </div>
-</ion-footer>
+
   <!-- 
 ooooooooo.                       .o88o.    oooooooooooo                    
 `888   `Y88.                     888 `"    `888'     `8                    
