removed R on close button in prof fee page

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -16,7 +16,7 @@ ___  ___        _      _  _              _   _                   _
       </ion-button>
 
 
-      <ion-button  routerDirection="backwards" color="chh-css-primary2" *ngIf="!btnclose" (click)="modifyProfFeeClose()">Closer&nbsp;
+      <ion-button  routerDirection="backwards" color="chh-css-primary2" *ngIf="!btnclose" (click)="modifyProfFeeClose()">Close&nbsp;
         <ion-icon name="close-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
