--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -106,7 +106,7 @@ ______             _     _                        _   _                   _
         <ion-row>
           <ion-col size="5">Pay Venue: </ion-col>
           <ion-col size="7">
-            <ion-badge>{{payvenue}}</ion-badge>
+            <ion-badge>{{payvenueTxt}}</ion-badge>
           </ion-col>
         </ion-row>
         <!-- <ion-row>
