--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -487,8 +487,8 @@ ______          _    _
     <ion-row>
 
 
-      <ion-col size-md="1"></ion-col>
-      <ion-col size-md="3">
+      <ion-col size-lg="1"  size-md="12"></ion-col>
+      <ion-col size-lg="3"  size-md="4">
 
 
 
@@ -502,7 +502,7 @@ ______          _    _
 
 
 
-      <ion-col size-md="4">
+      <ion-col size-lg="4"  size-md="4">
 
 
 
@@ -799,7 +799,7 @@ ______          _    _
 
       </ion-col>
 
-      <ion-col size-md="3">
+      <ion-col size-lg="3" size-md="4">
 
 
 
@@ -824,7 +824,7 @@ ______          _    _
 
 
       </ion-col>
-      <ion-col size-md="1"></ion-col>
+      <ion-col size-lg="1" size-md="12"></ion-col>
 
     </ion-row>
   </ion-grid>
