--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -326,11 +326,11 @@ ______             _     _                       ______             _
 
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col size-md="1"></ion-col>
-      <ion-col size-md="3">
+      <ion-col size-lg="1" size-md="12"></ion-col>
+      <ion-col size-lg="3" size-md="6">
         <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted"></app-chh-app-patient-header>
       </ion-col>
-      <ion-col size-md="4">
+      <ion-col size-lg="4" size-md="6">
         <div *ngIf="ifShowSummary == true">
           <img src="assets/img/online-transactions.png" />
 
@@ -374,7 +374,7 @@ ______             _     _                       ______             _
               <ion-row>
                 <ion-col size="5">Pay Venue: </ion-col>
                 <ion-col size="7">
-                  <ion-badge>{{payvenue}}</ion-badge>
+                  <ion-badge>{{payvenueTxt}}</ion-badge>
                 </ion-col>
               </ion-row>
               <!-- <ion-row>
@@ -454,7 +454,10 @@ ______             _     _                       ______             _
           <ion-button color="mango" size="default" expand="block" shape="round" [disabled]="toPFMbtn"
             (click)="redirecto()" *ngIf="ifShowSummary == false">Next</ion-button>
         </div>
-
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
         <!-- 
     
     <ion-grid    class="ion-no-padding " *ngIf="isDesktop && showSelection">
@@ -501,10 +504,7 @@ ______             _     _                       ______             _
       </ion-row>
     </ion-grid>
      -->
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+
 
 <ion-footer class="ion-no-border" *ngIf="isDesktop">
   <div class="footer tab-font-family" *ngIf="isDesktop">
