--- a/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
+++ b/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
@@ -1,7 +1,7 @@
 <ion-slides pager>
   <ion-slide>
     <chh-app-logo></chh-app-logo>
-    <h1><b>Welcome aboard, Doc!</b></h1>
+    <h1><b>Welcome aboard, Dok!</b></h1>
     <div align="center">
       <!-- <img src="assets/animations/21474-medical-frontliners.gif" /> -->
       <!-- <lottie-player
