--- a/src/app/pages/in-patient-patient-information/chh-app-icdrvs/chh-app-icdrvs.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-icdrvs/chh-app-icdrvs.page.html
@@ -1,13 +1,14 @@
 <ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
   <ion-toolbar color="mango">
-    <ion-title>
-      ICD / RVS
-    </ion-title>
+    <ion-title> ICD / RVS </ion-title>
     <ion-buttons
       slot="end"
       class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
     >
-      <ion-button routerLink="" routerDirection="backwards" color="chh-css-primary2"
+      <ion-button
+        routerLink=""
+        routerDirection="backwards"
+        color="chh-css-primary2"
         >Close&nbsp; <ion-icon name="close-outline"></ion-icon
       ></ion-button>
     </ion-buttons>
@@ -15,7 +16,11 @@
 </ion-header>
 
 <ion-content *ngIf="!isDesktop">
-  <ion-segment mode="ios" (ionChange)="segmentChanged($event)" [(ngModel)]="caseData">
+  <ion-segment
+    mode="ios"
+    (ionChange)="segmentChanged($event)"
+    [(ngModel)]="caseData"
+  >
     <ion-segment-button value="1stcase">
       <ion-label>1st Case</ion-label>
     </ion-segment-button>
@@ -31,14 +36,13 @@
   | |  | '_ \ / __|| | | || '__| / _` || '_ \  / __| / _ \
  _| |_ | | | |\__ \| |_| || |   | (_| || | | || (__ |  __/
  \___/ |_| |_||___/ \__,_||_|    \__,_||_| |_| \___| \___|
-                                                          
-                                                          
--->                                             
-                                               
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
-    <ion-row >
-      <ion-col size="12"  >
-        <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
+                                                                                                                
+-->
+
+  <ion-grid *ngIf="!isDesktop" class="ion-no-padding background-lightgray">
+    <ion-row>
+      <ion-col size="12">
+        <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin">
           <!-- Default List Header 
           <ion-list-header>
             <h4>Are you also an Insurance Coordinator?</h4>
@@ -49,20 +53,15 @@
             -->
 
           <ion-item>
-            <ion-label class="ion-text-wrap">Are you an Insurance Coordinator?</ion-label> 
+            <ion-label class="ion-text-wrap"
+              >Are you an Insurance Coordinator?</ion-label
+            >
             <ion-checkbox color="mango" checked="false"></ion-checkbox>
-            </ion-item>
-
-
-
+          </ion-item>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
-
-
-
-
 </ion-content>
 
 <ion-footer class="ion-no-border" *ngIf="!isDesktop">
@@ -74,17 +73,10 @@
           <ion-progress-bar value="0.5" color="warning"></ion-progress-bar>
         </ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
-
       </ion-row>
     </ion-grid>
   </ion-toolbar>
-
 </ion-footer>
-
-
-
-
-
 
 <!--
 ______          _    _              
@@ -97,11 +89,15 @@ ______          _    _
                              |_|    
 -->
 
-<ion-header *ngIf="isDesktop"  mode="md" class="ion-no-border custom-border-bottom" >
+<ion-header
+  *ngIf="isDesktop"
+  mode="md"
+  class="ion-no-border custom-border-bottom"
+>
   <ion-toolbar>
-    <ion-row class="ion-align-items-center"  >
+    <ion-row class="ion-align-items-center">
       <ion-col size="2">
-        <chh-app-logo-sm ></chh-app-logo-sm>
+        <chh-app-logo-sm></chh-app-logo-sm>
       </ion-col>
       <ion-col size="10">
         <div class="navbar" class="ion-text-center chh-bg">
@@ -143,7 +139,7 @@ ______          _    _
             routerLinkActive="active-link"
             class="link"
           >
-          {{this.constants.MENU__VALUE__SETTINGS}}
+            {{this.constants.MENU__VALUE__SETTINGS}}
           </ion-button>
           <ion-button
             id="button-logout"
@@ -152,15 +148,15 @@ ______          _    _
             routerLinkActive="active-link"
             class="link"
           >
-          {{this.constants.MENU__VALUE__LOG_OUT}}
+            {{this.constants.MENU__VALUE__LOG_OUT}}
           </ion-button>
         </div>
       </ion-col>
     </ion-row>
   </ion-toolbar>
-  </ion-header> 
-<ion-content  *ngIf="isDesktop">
-  <ul class="breadcrumb" >
+</ion-header>
+<ion-content *ngIf="isDesktop">
+  <ul class="breadcrumb">
     <li>
       <a routerLink="{{routerLinkBack1}}">{{patient_name}}</a>
       <ion-icon name="chevron-forward-outline" class="icon-center"></ion-icon>
@@ -170,12 +166,11 @@ ______          _    _
       <ion-icon name="chevron-forward-outline" class="icon-center"></ion-icon>
     </li>
     <li>
-      <a >{{method}}</a>
+      <a>{{method}}</a>
     </li>
-  </ul>   
+  </ul>
   <ion-grid class="ion-no-padding">
-    <ion-row>
-    </ion-row>
+    <ion-row> </ion-row>
   </ion-grid>
 </ion-content>
 <ion-footer class="ion-no-border" *ngIf="isDesktop">
