--- a/src/app/chh-web-components/chh-app-slides/chh-app-slides.component.html
+++ b/src/app/chh-web-components/chh-app-slides/chh-app-slides.component.html
@@ -1,7 +1,7 @@
 <!--ion-slides pager>
   <ion-slide>
     <app-logo></app-logo>
-    <h2>We thank you, Doc!</h2>
+    <h2>We thank you, Dok!</h2>
     <div class="center">
       <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
