--- a/src/app/pages/case-rates/case-rates.page.html
+++ b/src/app/pages/case-rates/case-rates.page.html
@@ -1,8 +1,6 @@
-<ion-header mode="md" class="ion-no-border" > 
+<ion-header mode="md" class="ion-no-border">
   <ion-toolbar color="mango">
-    <ion-title>
-      Case Rates {{case}}
-    </ion-title>
+    <ion-title> Case Rates {{case}} </ion-title>
     <ion-buttons
       slot="end"
       class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
@@ -15,93 +13,130 @@
 </ion-header>
 <!-- <app-chh-app-desktop-navigation *ngIf="isDesktop"></app-chh-app-desktop-navigation> -->
 <ion-content *ngIf="ccCase=='first'">
-  <div class=" custom-skeleton" *ngIf="ionSkeleton">
-  <ion-list >
-    <ion-item >
-      <ion-label>
-        <h2 class="ion-text-wrap"><ion-skeleton-text animated></ion-skeleton-text></h2>
-        <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 88%"></ion-skeleton-text></h3>
-        <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 70%"></ion-skeleton-text></h3>
-      </ion-label>
-    </ion-item>
-  </ion-list>
-    <ion-list >
-      <ion-item >
+  <div class="custom-skeleton" *ngIf="ionSkeleton">
+    <ion-list>
+      <ion-item>
         <ion-label>
-          <h2 class="ion-text-wrap"><ion-skeleton-text animated style="width: 40%"></ion-skeleton-text></h2>
-          <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 30%"></ion-skeleton-text></h3>
-          <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 70%"></ion-skeleton-text></h3>
+          <h2 class="ion-text-wrap">
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </h2>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 88%"></ion-skeleton-text>
+          </h3>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+          </h3>
         </ion-label>
       </ion-item>
-  </ion-list>
+    </ion-list>
+    <ion-list>
+      <ion-item>
+        <ion-label>
+          <h2 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 40%"></ion-skeleton-text>
+          </h2>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+          </h3>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+          </h3>
+        </ion-label>
+      </ion-item>
+    </ion-list>
   </div>
-  <div  *ngIf ="ionNoData">
-    <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
+  <div *ngIf="ionNoData">
+    <img src="assets/img/3973477-no-data-concept-illustration-custom.png" />
     <div class="ion-text-center">
       <h3>No results found</h3>
     </div>
   </div>
-  <div  *ngIf ="ionStart">
+  <div *ngIf="ionStart">
     <div class="ion-text-center">
-      <img src="assets/img/hunt-rafiki.png" alt="Search">
+      <img src="assets/img/hunt-rafiki.png" alt="Search" />
       <h3>Search to see case rates</h3>
     </div>
   </div>
-  <ion-list >
-    <ion-item *ngFor="let x of caseRateResponse_first" >
+  <ion-list>
+    <ion-item *ngFor="let x of caseRateResponse_first">
       <ion-label>
         <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
         <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
-        <ion-badge><h3 class="ion-text-wrap"><b>PF : {{x.case_pf  | number}}</b></h3></ion-badge>
+        <ion-badge
+          ><h3 class="ion-text-wrap">
+            <b>PF : {{x.case_pf | number}}</b>
+          </h3></ion-badge
+        >
       </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
 <ion-content *ngIf="ccCase=='second'">
-  <div class=" custom-skeleton" *ngIf="ionSkeleton1">
-  <ion-list >
-    <ion-item >
-      <ion-label>
-        <h2 class="ion-text-wrap"><ion-skeleton-text animated></ion-skeleton-text></h2>
-        <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 88%"></ion-skeleton-text></h3>
-        <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 70%"></ion-skeleton-text></h3>
-      </ion-label>
-    </ion-item>
-  </ion-list>
-    <ion-list >
-      <ion-item >
+  <div class="custom-skeleton" *ngIf="ionSkeleton1">
+    <ion-list>
+      <ion-item>
         <ion-label>
-          <h2 class="ion-text-wrap"><ion-skeleton-text animated style="width: 40%"></ion-skeleton-text></h2>
-          <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 30%"></ion-skeleton-text></h3>
-          <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 70%"></ion-skeleton-text></h3>
+          <h2 class="ion-text-wrap">
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </h2>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 88%"></ion-skeleton-text>
+          </h3>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+          </h3>
         </ion-label>
       </ion-item>
-  </ion-list>
+    </ion-list>
+    <ion-list>
+      <ion-item>
+        <ion-label>
+          <h2 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 40%"></ion-skeleton-text>
+          </h2>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+          </h3>
+          <h3 class="ion-text-wrap">
+            <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+          </h3>
+        </ion-label>
+      </ion-item>
+    </ion-list>
   </div>
-  <div  *ngIf ="ionNoData1">
-    <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
+  <div *ngIf="ionNoData1">
+    <img src="assets/img/3973477-no-data-concept-illustration-custom.png" />
     <div class="ion-text-center">
       <h3>No results found</h3>
     </div>
   </div>
-  <div  *ngIf ="ionStart1">
+  <div *ngIf="ionStart1">
     <div class="ion-text-center">
-      <img src="assets/img/hunt-rafiki.png" alt="Search">
+      <img src="assets/img/hunt-rafiki.png" alt="Search" />
       <h3>Search to see case rates</h3>
     </div>
   </div>
-  <ion-list >
-    <ion-item *ngFor="let x of caseRateResponse_second" >
+  <ion-list>
+    <ion-item *ngFor="let x of caseRateResponse_second">
       <ion-label>
         <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
         <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
-        <ion-badge><h3 class="ion-text-wrap"><b>PF : {{x.case_pf  | number}}</b></h3></ion-badge>
+        <ion-badge
+          ><h3 class="ion-text-wrap">
+            <b>PF : {{x.case_pf | number}}</b>
+          </h3></ion-badge
+        >
       </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
-<ion-footer  class="ion-no-border" color="mango" >
-  <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.CaseClass" color="mango">
+<ion-footer class="ion-no-border" color="mango">
+  <ion-segment
+    (ionChange)="segmentChanged($event)"
+    mode="ios"
+    [(ngModel)]="caseRateData.CaseClass"
+    color="mango"
+  >
     <ion-segment-button value="first">
       <ion-label>1st Case</ion-label>
     </ion-segment-button>
@@ -115,15 +150,17 @@
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating" [class.activedescription]="activedescription">Description : </ion-label>
+    <ion-label position="floating" [class.activedescription]="activedescription"
+      >Description :
+    </ion-label>
     <ion-input [(ngModel)]="caseRateData.CaseSearchDesc"></ion-input>
   </ion-item>
-  <ion-grid class="ion-no-padding" >
-    <ion-row >
+  <ion-grid class="ion-no-padding">
+    <ion-row>
       <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
       <ion-col size-xs="12" size-md="4" size-lg="4">
         <ion-button
-        color="mango"
+          color="mango"
           size="default"
           expand="block"
           shape="round"
