--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -2,22 +2,18 @@
   <ion-grid>
     <ion-row>
       <ion-col size-lg="6" size-md="6" offset-md="3 " size-sm="6" size="12">
-
-
-
-
-        <ion-slides pager='{{!isDesktop}}'  #theSlides [options]="slideOpts">
+        <ion-slides pager="{{!isDesktop}}" #theSlides [options]="slideOpts">
           <ion-slide id="slide1">
             <!-- <app-logo></app-logo> -->
-            <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital">
-            <h1><b>Welcome aboard, Doc!</b></h1>
+            <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital" />
+            <h1><b>Welcome aboard, Dok!</b></h1>
             <div align="center">
               <lottie-player
                 src="assets/animations/21474-medical-frontliners.json"
                 mode="bounce"
                 background="transparent"
                 speed="3"
-                style="width: 300px;"
+                style="width: 300px"
                 loop
                 autoplay
               ></lottie-player>
@@ -27,10 +23,12 @@
               appreciate it!
             </h3>
             <p>Swipe left to see what we've built for you.</p>
-            <ion-button id="first-slide-button-right" *ngIf="isDesktop" (click)="moveToNext(theSlides)"><ion-icon name="chevron-forward-outline"></ion-icon></ion-button>  
-
-
-            
+            <ion-button
+              id="first-slide-button-right"
+              *ngIf="isDesktop"
+              (click)="moveToNext(theSlides)"
+              ><ion-icon name="chevron-forward-outline"></ion-icon
+            ></ion-button>
           </ion-slide>
           <ion-slide>
             <h1>View your admitted patients.</h1>
@@ -40,7 +38,7 @@
                 mode="bounce"
                 background="transparent"
                 speed="1"
-                style="width: 300px; height: 300px;"
+                style="width: 300px; height: 300px"
                 loop
                 autoplay
               ></lottie-player>
@@ -49,8 +47,18 @@
               You will be notified via SMS when you have patients admitted in
               the hospital on both sites (Cebu and Mandaue).
             </p>
-            <ion-button id="second-slide-button-left" *ngIf="isDesktop" (click)="moveToPrev(theSlides)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>  
-            <ion-button id="second-slide-button-right" *ngIf="isDesktop" (click)="moveToNext(theSlides)"><ion-icon name="chevron-forward-outline"></ion-icon></ion-button>  
+            <ion-button
+              id="second-slide-button-left"
+              *ngIf="isDesktop"
+              (click)="moveToPrev(theSlides)"
+              ><ion-icon name="chevron-back-outline"></ion-icon
+            ></ion-button>
+            <ion-button
+              id="second-slide-button-right"
+              *ngIf="isDesktop"
+              (click)="moveToNext(theSlides)"
+              ><ion-icon name="chevron-forward-outline"></ion-icon
+            ></ion-button>
           </ion-slide>
           <ion-slide>
             <h1>View patient appointments.</h1>
@@ -60,7 +68,7 @@
                 mode="bounce"
                 background="transparent"
                 speed="1"
-                style="width: 300px; height: 300px;"
+                style="width: 300px; height: 300px"
                 loop
                 autoplay
               ></lottie-player>
@@ -70,8 +78,18 @@
               now view a list of patients that are expected to visit your
               clinic.
             </p>
-            <ion-button id="third-slide-button-left" *ngIf="isDesktop" (click)="moveToPrev(theSlides)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>  
-            <ion-button id="third-slide-button-right" *ngIf="isDesktop" (click)="moveToNext(theSlides)"><ion-icon name="chevron-forward-outline"></ion-icon></ion-button>  
+            <ion-button
+              id="third-slide-button-left"
+              *ngIf="isDesktop"
+              (click)="moveToPrev(theSlides)"
+              ><ion-icon name="chevron-back-outline"></ion-icon
+            ></ion-button>
+            <ion-button
+              id="third-slide-button-right"
+              *ngIf="isDesktop"
+              (click)="moveToNext(theSlides)"
+              ><ion-icon name="chevron-forward-outline"></ion-icon
+            ></ion-button>
           </ion-slide>
           <ion-slide>
             <h1>Submit professional fee online.</h1>
@@ -81,7 +99,7 @@
                 mode="bounce"
                 background="transparent"
                 speed="1"
-                style="width: 300px; height: 300px;"
+                style="width: 300px; height: 300px"
                 loop
                 autoplay
               ></lottie-player>
@@ -94,12 +112,23 @@
             <ion-row>
               <ion-col size-lg="4" offset-lg="4">
                 <chh-app-start *ngIf="!android"></chh-app-start>
-                <ion-button id="button-lets-go" *ngIf="android" shape="round" expand="block" (click)="addToHomeScreen()" color="mango" >INSTALL</ion-button>
-
+                <ion-button
+                  id="button-lets-go"
+                  *ngIf="android"
+                  shape="round"
+                  expand="block"
+                  (click)="addToHomeScreen()"
+                  color="mango"
+                  >INSTALL</ion-button
+                >
               </ion-col>
             </ion-row>
-            <ion-button id="fourth-slide-button-left" *ngIf="isDesktop" (click)="moveToPrev(theSlides)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>  
-
+            <ion-button
+              id="fourth-slide-button-left"
+              *ngIf="isDesktop"
+              (click)="moveToPrev(theSlides)"
+              ><ion-icon name="chevron-back-outline"></ion-icon
+            ></ion-button>
           </ion-slide>
         </ion-slides>
       </ion-col>
