Remove pipe char in pay venue field.

--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -90,7 +90,7 @@
         <ion-col size="7">
           <b>
             <ion-text color="danger">
-              &#8369; {{data1 | number}} | {{withVat}}
+              &#8369; {{data1 | number}} {{withVat}}
             </ion-text>
           </b>
         </ion-col>
