removed lab results

--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -69,7 +69,7 @@ ___  ___        _      _  _
       [finalDiagnosis1]="finalDiagnosis1"
       [finalDiagnosis2]="finalDiagnosis2"
     ></app-chh-app-final-diagnosis>
-  <ion-card mode="ios"  *ngIf="!isDesktop" >
+  <!-- <ion-card mode="ios"  *ngIf="!isDesktop" >
     <ion-list>
       <ion-item style="padding-top: 10px;">
         <div class="ion-text-wrap"><b>Lab Tests</b><br /></div>
@@ -131,7 +131,7 @@ ___  ___        _      _  _
               </div>
           </div>
     </ion-list>
-  </ion-card>
+  </ion-card> -->
     <app-chh-app-list-of-doctors  
       [coDoctors]="coDoctors"
       [objecthandler]="objecthandler"
@@ -205,7 +205,7 @@ ______          _    _
   </ion-fab> -->
     <ion-grid class="ion-no-padding" >
       <ion-row>
-        <ion-col size-lg="1" size-md="12"></ion-col>
+        <ion-col size-lg="2" size-md="12"></ion-col>
         <!-- <ion-col size-lg="3" size-md="4">
               <app-chh-app-admitting-diagnosis
                 [admittingDiagnosis]="admittingDiagnosis"
