fixed, coordinators fee and appointments min-max date

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -191,7 +191,7 @@ ______             _     _                        _   _                   _
   <div *ngIf="ifShowSummary == false">
     <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted">
     </app-chh-app-patient-header>
-    <ion-card mode="ios" *ngIf="areyouaninsurancecoordinator">
+    <ion-card mode="ios" [disabled]="!areyouaninsurancecoordinator">
       <ion-item lines="none">
         <ion-label class="ion-text-wrap"
           >Are you an Insurance Coordinator?</ion-label
